--- a/information.css
+++ b/information.css
@@ -26,6 +26,7 @@ body{
        background-size: cover;    
        width: 100%;
        min-height: 100vh;
+       min-width: 100vh;
     
 }
 .avt{
